--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -108,7 +108,7 @@
     </section><!-- End About Section -->
 
         <!-- ======= Portfolio Section INDICADORES ======= -->
-        <section id="portfolio" class="portfolio section-bg">
+    <section id="portfolio" class="portfolio section-bg">
           <div class="container">
     
             <div class="section-title">
@@ -243,7 +243,19 @@
                   <div class="portfolio-links">
                     <a href="https://app.powerbi.com/view?r=eyJrIjoiZDVhMWJlODgtMWE5Yi00NjQwLWI3ZGItMTFhN2I0ZDhmMDE3IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Niños con CRED, vacunacion completa, entrega de hierro, dosaje de hemglobina y cuentan con DNI
+                      Niños con CRED, vacunacion completa, entrega de hierro, dosaje de hemglobina y cuentan con DNI (PROSPECTIVO)
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <div class="portfolio-wrap">
+                  <img src="{% static 'assets/img/portfolio/paquete_nino.png' %}" class="img-fluid" alt="">
+                  <div class="portfolio-links">
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiM2MxMjE0NWUtOGI1OC00NjI4LTk5N2EtMTgwNzg2NDYzN2JlIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSectionb74bf40c2c679028896e" target="_blank">   
+                      <i class="bx bx-link"></i>
+                      Niños con CRED, vacunacion completa, entrega de hierro, dosaje de hemglobina y cuentan con DNI (RETROSPECTIVO)
                     </a>
                   </div>
                 </div>
@@ -401,7 +413,7 @@
             </div>
     
           </div>
-        </section><!-- End Portfolio Section -->
+    </section><!-- End Portfolio Section -->
 
     <!-- ======= Facts Section PADRON NOMINAL ======= -->
     <section id="facts" class="facts">
