actualiza cnv y vacuna

--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -522,8 +522,8 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
-            <h4 class="title"><a href="https://www.minsa.gob.pe/reunis/data/Inmunizaciones.asp" target="_blank">Tablero de Inmunizaciones</a></h4>
-            <p class="description">Tablero de Informacion de Inmunizaciones- REUNIS</p>
+            <h4 class="title"><a href="https://app.powerbi.com/view?r=eyJrIjoiNTViNGFmNTYtOWVjYy00NmNhLWJiYWUtMjQxNzE2MDI2OGJjIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">Seguimiento Gestantes</a></h4>
+            <p class="description">Padron de Gestantes de Inmunizaciones</p>
           </div>
         </div>
 
@@ -550,13 +550,13 @@
                   </a>
                 </p>
                 <p>
-                  <a href="https://sites.google.com/view/hechos-vitalesjunin/inicio" target="_blank">
-                    Tablero CNV en linea REGIONAL
+                  <a href="https://datastudio.google.com/reporting/ca23cbc1-88f4-4faa-b906-0972bd97ff03/page/p_ega5ofpjwc" target="_blank">
+                    Tablero CNV en linea REGIONAL 2022
                   </a>
                 </p>
                 <p>
                   <a href="https://www.minsa.gob.pe/reunis/data/tablero_cnv.asp" target="_blank">
-                    Tablero Nacimiento REUNIS
+                    Tablero CNV en linea REGIONAL 2021,2020,2019 y 2018
                   </a>
                 </p>
 
