vacunas recien nacido

--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -325,7 +325,7 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/vacuna_nacido.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiM2ZkN2UzMjgtMzQwNC00MWRhLWE0NjYtN2ZiMmY5MzRkNzI4IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiZjNmMWMyYmMtZWY3Zi00NjFhLWI5YTgtYmQ3NGFjZGM5Zjk0IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">   
                       <i class="bx bx-link"></i>
                       Porcentaje de recien nacidos que reciben vacunas completas antes del alta
                     </a>
