--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -118,9 +118,8 @@
               <div class="col-lg-12 d-flex justify-content-center">
                 <ul id="portfolio-flters">
                   <li data-filter="*" class="filter-active">TODOS</li>
-                  <li data-filter=".filter-app">FED</li>
+                  <li data-filter=".filter-app">FED - 2022 </li>
                   <li data-filter=".filter-card">CONVENIOS DE GESTION</li>
-                  <li data-filter=".filter-web">AP-ENDIS</li>
                 </ul>
               </div>
             </div>
@@ -131,9 +130,9 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/prematuro.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiMDAyMzcxNWYtMmJjYy00ZmJjLThlZDQtMmYyMDg4M2Q1ZmNiIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiMDAyMzcxNWYtMmJjYy00ZmJjLThlZDQtMmYyMDg4M2Q1ZmNiIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">
                       <i class="bx bx-link"></i>
-                      Niños con prematuridad y/o bajo peso al nacer, que reciben gotas en hierro
+                      Niños con prematuridad y/o bajo peso al nacer, que reciben hierro en gotas hasta los 59 días de vida
                     </a>
                   </div>
                 </div>
@@ -145,7 +144,7 @@
                   <div class="portfolio-links">
                     <a href="https://app.powerbi.com/view?r=eyJrIjoiZmIyNDViZjUtZWJkOS00MWQzLTg2MTYtM2FkNTRmYWNlMWJiIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Recién nacidos,cuentan con tamizaje neonatal (metabólico) al mes de vida
+                      recién nacidos en IPRESS del nivel regional, cuentan con tamizaje neonatal al mes de vida
                     </a>
                   </div>
                 </div>
@@ -155,9 +154,9 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/inicio_tratamiento.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiODU0NDBmZTEtZjcxYi00MTI5LTgxNGUtYWJhYTY1NjRhNjJkIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiODU0NDBmZTEtZjcxYi00MTI5LTgxNGUtYWJhYTY1NjRhNjJkIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Niños y Niñas entre los 110 y 130 dias que reciben hierro en gotas
+                      Niños y niñas de 4 meses de edad, que reciben hierro en gotas entre 110 y 130 días
                     </a>
                   </div>
                 </div>
@@ -167,9 +166,9 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/dit.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiNjFiMjVjMGQtMTlhMy00YzU4LWE0ZmYtZmM3MTEwNTExYWZmIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">   
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiZWRmOGVkOTktYmUyNS00OGQxLTg1NDMtZDQ4YWU2M2UxNmU2IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Niños de 6 a 8 Meses, que inician suplementacion o tratamiento preventivo
+                      niñas y niños de 6 meses de edad con dosaje de hemoglobina, que iniciaron tratamiento o suplementación preventiva con hierro
                     </a>
                   </div>
                 </div>
@@ -179,9 +178,45 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/cred.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiNzdiNmJjOWUtYjBlMy00Y2VjLWFkZWUtNGNjYmViYzM0ZDQ5IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">   
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiMjkyNjE3MGYtOWI4Ny00ZTQ2LWEyNTgtN2JhMDRiYjk4YTIxIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Niños menores de 12 meses de edad, que cuentan con controles CRED presenciales
+                      Niñas y niños menores de 12 meses de edad del departamento, que cuentan con controles CRED según edad (retrospectivo)
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <div class="portfolio-wrap">
+                  <img src="{% static 'assets/img/portfolio/paquete_nino.png' %}" class="img-fluid" alt="">
+                  <div class="portfolio-links">
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiNjQ5YzczZjktNWUzMS00MTUyLWI3MjAtMTE5NzQ1MTJhZWMzIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
+                      <i class="bx bx-link"></i>
+                      Niñas y niños menores de 12 meses de edad del departamento, que cuentan con controles CRED según edad (prospectivo) 
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <div class="portfolio-wrap">
+                  <img src="{% static 'assets/img/portfolio/paquete_nino.png' %}" class="img-fluid" alt="">
+                  <div class="portfolio-links">
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiYzc3OTAxYzctMWUxYy00NDkwLTg0YjQtODZlYjY3MDJjODEyIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">   
+                      <i class="bx bx-link"></i>
+                      Niñas y niños menores de 12 meses de edad procedentes de los quintiles 1 y 2 de pobreza departamental con paquete integrado de servicios (retrospectivo)
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <div class="portfolio-wrap">
+                  <img src="{% static 'assets/img/portfolio/paquete_nino.png' %}" class="img-fluid" alt="">
+                  <div class="portfolio-links">
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiYjNmOTE2MDgtNTVhYi00NTdlLTk3ZjYtMTBjODZiNTU0NDEyIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
+                      <i class="bx bx-link"></i>
+                      niñas y niños menores de 12 meses de edad procedentes de los quintiles 1 y 2 de pobreza departamental con paquete integrado de servicios (prospectivo)
                     </a>
                   </div>
                 </div>
@@ -193,7 +228,7 @@
                   <div class="portfolio-links">
                     <a href="https://app.powerbi.com/view?r=eyJrIjoiNDcxMTllODItYjc1Yi00ZTQ1LTk4OWUtNmM5NWZjZDljNDQ0IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Indicadores relacionados al COVID-19 SIII-05 Y SII-06
+                      Casos sospechosos o confirmados, cuentan con seguimiento clínico e inician tratamiento covid-19.
                     </a>
                   </div>
                 </div>
@@ -203,9 +238,21 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/examen.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiZDk5MmExMzgtMTZmZS00N2ViLWE2NjQtYzk0MDJkNjcwNDcyIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">   
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiZTAwMGFkNmQtMTczOC00NDUzLWE4MjktMTgwNTA5NDVmZGJkIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection9772086e041060e8d1bb" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Gestantes atendidas en IPRESS,que reciben 4 exámenes auxiliares en el primer trimestre
+                      Mujeres gestantes atendidas en IPRESS del primer nivel de atención de salud del gobierno regional que reciben su 1 APN
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                <div class="portfolio-wrap">
+                  <img src="{% static 'assets/img/portfolio/examen.png' %}" class="img-fluid" alt="">
+                  <div class="portfolio-links">
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiNWQ0NjZkNjEtYTkwMS00ODc2LWFhNmYtNDI2YzUyODQ3ZDM2IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
+                      <i class="bx bx-link"></i>
+                      Mujeres gestantes atendidas en IPRESS del primer nivel de atención de salud que reciben su 1 APN y 04 exámenes auxiliares hasta antes de las 14 semanas de gestación
                     </a>
                   </div>
                 </div>
@@ -215,9 +262,9 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/planificacion.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiNTQyODk5MTAtNWVmYS00NmZkLWJmMTgtYWY1ZTk5MGM3YmI4IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection2193f6f4cb2050b67741" target="_blank">   
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiN2NhYjRiMWYtMzQ1OC00ODJhLWEyM2YtZDhjNmNhODkzOTYxIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Usuarias en el servicio de Planificacion Familiar con deteccion de violencia contra la mujer
+                      Usuarias nuevas en el servicio de planificación familiar PPFF - con detección de violencia contra la mujer (tamizaje).
                     </a>
                   </div>
                 </div>
@@ -227,33 +274,9 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/incio_tratamiento_psicologia.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiN2NjZWE1ODgtZTBmNC00M2Y1LTliNWEtYjY3NTdiYzI4NmZiIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection0a4138561842cd17b6c6" target="_blank">   
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiMTEzNDgwZjMtM2E5NS00MWNkLWI1YTktMmQyODI2YTEzY2U5IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSection5063d4cc0ff78b4f1861" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Gestantes cuentan con diagnostico e inician tratamiento, realizadas en IPRESS del primer nivel
-                    </a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <div class="portfolio-wrap">
-                  <img src="{% static 'assets/img/portfolio/paquete_nino.png' %}" class="img-fluid" alt="">
-                  <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiZDVhMWJlODgtMWE5Yi00NjQwLWI3ZGItMTFhN2I0ZDhmMDE3IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
-                      <i class="bx bx-link"></i>
-                      Niños con CRED, vacunacion completa, entrega de hierro, dosaje de hemglobina y cuentan con DNI (PROSPECTIVO)
-                    </a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <div class="portfolio-wrap">
-                  <img src="{% static 'assets/img/portfolio/paquete_nino.png' %}" class="img-fluid" alt="">
-                  <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiM2MxMjE0NWUtOGI1OC00NjI4LTk5N2EtMTgwNzg2NDYzN2JlIiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9&pageName=ReportSectionb74bf40c2c679028896e" target="_blank">   
-                      <i class="bx bx-link"></i>
-                      Niños con CRED, vacunacion completa, entrega de hierro, dosaje de hemglobina y cuentan con DNI (RETROSPECTIVO)
+                      Gestantes cuentan con diagnóstico de violencia e inician tratamiento realizadas en IPRESS del primer nivel de atención de salud
                     </a>
                   </div>
                 </div>
@@ -263,21 +286,9 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/paquete_gestante.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiMjk0OThiM2YtNjI0MC00OTVmLWE3NmItMTUwYmUzMDYwYzk5IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
+                    <a href="https://app.powerbi.com/view?r=eyJrIjoiZjE1ZWIzYjctYjUzNy00NDM3LWI3M2EtZThjZDIzODgxNzA1IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
                       <i class="bx bx-link"></i>
-                      Mujeres con parto institucional, que durante su gestanción recibieron el paquete integrado de servicios (RETROSPECTIVO)
-                    </a>
-                  </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                <div class="portfolio-wrap">
-                  <img src="{% static 'assets/img/portfolio/paquete_gestante.png' %}" class="img-fluid" alt="">
-                  <div class="portfolio-links">
-                    <a href="https://app.powerbi.com/view?r=eyJrIjoiNDM2ODYxNDMtZmRhNy00YjY2LWEyMzAtODFlOThhZTA5YWQ0IiwidCI6ImQxYzM1MDFkLWE2MWUtNGJiYi04NDdhLWQ5NDRiZmFlOGRiMCIsImMiOjR9" target="_blank">   
-                      <i class="bx bx-link"></i>
-                      Mujeres con parto institucional, que durante su gestanción recibieron el paquete integrado de servicios (PROSPECTIVO)
+                      Mujeres con parto institucional, que durante su gestación recibieron el paquete integrado de servicios (retrospectivo).
                     </a>
                   </div>
                 </div>
