--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -123,7 +123,7 @@
                 <div class="portfolio-wrap">
                   <img src="{% static 'assets/img/portfolio/inicio_tratamiento.png' %}" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="http://saludjunin.ga/login.php" target="_blank">
+                    <a href="http://www.saludjunin.tk/login.php" target="_blank">
                       <i class="bx bx-link"></i>
                       Portal de seguimiento de Indicadores
                     </a>
