logo salud junin

--- a/principal/templates/index.html
+++ b/principal/templates/index.html
@@ -43,8 +43,8 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="{% static 'assets/img/profile-img-ok.jpg' %}" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">DIRESA JUNIN</a></h1>
+        <img src="{% static 'assets/img/profile-img-ok3.jpg' %}" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="index.html">SALUD JUNIN</a></h1>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
